# tr5_orin_7_7

src/tr5_demo_test/: CMakeLists.txt  mock_log.csv
src/tr5_demo_test/demo/: fig.py  float_control.cpp  jump_mpc.cpp  run_wbc.cpp  walk_mpc_wbc.cpp  walk_mpc_wbc_origin.cpp  walk_wbc.cpp  walk_wbc_staircase.cpp
src/tr5_demo_test/include/tr5_demo_test/: Ankle_Kin_Dyn.hpp  Hip_Knee_Kin_Dyn.hpp  MJ_interface.h  PVT_ctrl.h  StateEst.h  Transformation.h  csv_input_loader.h  data_bus.h  debug_utiles.h  foot_placement.h  gait_scheduler.h  joystick_interpreter.h  mock_interface.h  mpc.h  pino_kin_dyn.h  priority_tasks.h  useful_math.h  wbc_priority.h
src/tr5_demo_test/install/: local_setup.sh  setup.bash  setup.sh
src/tr5_demo_test/install/tr5_demo_test/lib/tr5_demo_test/: sensor_publisher  sensor_publisher2
src/tr5_demo_test/install/tr5_demo_test/share/tr5_demo_test/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/tr5_demo_test/models/: TR5.urdf  TR5.xml  TR5_0407.urdf  TR5_float.xml  TR5_floating.xml  decimation.py  scene.xml  scene_board.xml  scene_float.xml  scene_staircase.xml
src/tr5_demo_test/models/TR5/: CMakeLists.txt  package.xml
src/tr5_demo_test/models/TR5/config/: joint_names_TR5_v250109PM.SLDASM.yaml
src/tr5_demo_test/models/TR5/launch/: display.launch  gazebo.launch
src/tr5_demo_test/models/TR5/meshes/: Link_arm_l_01.STL  Link_arm_l_03.STL  Link_arm_l_05.STL  Link_arm_l_07.STL  Link_arm_r_01.STL  Link_arm_r_02.STL  Link_arm_r_05.STL  Link_head_pitch.STL  Link_head_yaw.STL  Link_hip_l_pitch.STL  Link_hip_l_roll.STL  Link_hip_l_yaw.STL  Link_hip_r_pitch.STL  Link_knee_l_pitch.STL  Link_knee_r_pitch.STL  Link_waist_yaw.STL
src/tr5_demo_test/models/TR5/urdf/: TR5_v250109PM.SLDASM.csv  TR5_v250109PM.SLDASM.urdf
src/tr5_demo_test/models/meshes/: Link_ankle_l_pitch.STL  Link_ankle_l_roll.STL  Link_ankle_r_roll.STL  Link_arm_l_01.STL  Link_arm_l_02.STL  Link_arm_l_03.STL  Link_arm_l_04.STL  Link_arm_l_05.STL  Link_arm_l_06.STL  Link_arm_l_07.STL  Link_arm_r_01.STL  Link_arm_r_02.STL  Link_arm_r_03.STL  Link_arm_r_04.STL  Link_arm_r_05.STL  Link_arm_r_06.STL  Link_arm_r_07.STL  Link_head_pitch.STL  Link_head_yaw.STL  Link_hip_l_pitch.STL  Link_hip_l_roll.STL  Link_hip_l_yaw.STL  Link_hip_r_pitch.STL  Link_hip_r_roll.STL  Link_knee_l_pitch.STL  Link_knee_r_pitch.STL  Link_waist_roll.STL  Link_waist_yaw.STL  base_link.STL
src/tr5_demo_test/models/meshes_og/: Link_ankle_l_roll.STL  Link_ankle_r_roll.STL  Link_arm_l_02.STL  Link_arm_l_04.STL  Link_arm_l_06.STL  Link_arm_r_03.STL  Link_arm_r_04.STL  Link_arm_r_06.STL  Link_arm_r_07.STL  Link_hip_r_roll.STL  Link_waist_roll.STL  base_link.STL
src/tr5_demo_test/record/: matlabReadDataScript.txt
src/tr5_demo_test/src/: :wq  Cal_Ankle_IK.cpp  Cal_Ankle_Kin.cpp  Cal_Knee_Dyn.cpp  Cal_Knee_Kin.cpp  Cal_Thigh_Kin.cpp  MJ_interface.cpp  PVT_ctrl.cpp  StateEst.cpp  Transformation.cpp  bezier_1D.cpp  csv_input_loader.cpp  demo.cpp  fig.py  foot_placement.cpp  gait_scheduler.cpp  joint_ctrl_config.json  joystick_interpreter.cpp  mock_interface.cpp  mpc.cpp  pino_kin_dyn.cpp  priority_tasks.cpp  publisher.cpp  publisher2.cpp  test_csv_loader  test_csv_loader.cpp  useful_math.cpp  walk_mpc_wbc.cpp  walk_mpc_wbc_copy.cpp  walk_mpc_wbc_copy.cpz~  walk_mpc_wbc_copy_05_12.cpp  walk_mpc_wbc_origin.cpp  wbc_priority.cpp
src/tr5_demo_test/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/tr5_interfaces/: CMakeLists.txt  package.xml
src/tr5_interfaces/msg/: AnkleLength.msg  MultiDofCommand.msg  MultiDofState.msg  SingleDofCommand.msg  SingleDofState.msg  SixDForce.msg  SixDForceArray.msg
